--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "license": "MIT",
   "devDependencies": {
     "@types/node": "^20.4.5",
+    "pino-pretty": "^10.3.1",
     "typescript": "^5.1.6"
   },
   "dependencies": {
