--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   },
   "scripts": {
     "start": "node .",
-    "build": "tsc"
+    "build": "tsc && cp -R public dist/"
   },
   "keywords": [],
   "author": "",
@@ -21,6 +21,7 @@
   },
   "dependencies": {
     "@deliberative/crypto": "^1.0.8",
+    "@fastify/static": "^6.12.0",
     "fastify": "^4.22.2",
     "protobufjs": "~7.2.5"
   }
