--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   },
   "dependencies": {
     "@deliberative/crypto": "^1.0.8",
+    "@fastify/formbody": "^7.4.0",
     "@fastify/static": "^6.12.0",
     "fastify": "^4.22.2",
     "protobufjs": "~7.2.5"
