--- a/package.json
+++ b/package.json
@@ -4,17 +4,19 @@
   "description": "A barebones PKCE proxy to enable OAuth for OAuth providers that do not support PKC",
   "main": "dist/index.js",
   "engines": {
-    "node": "19.x"
+    "node": "20.x"
   },
   "scripts": {
     "start": "node .",
-    "build": "tsc && cp -R public dist/"
+    "build": "tsc && cp -R public dist/",
+    "test": "ava"
   },
   "keywords": [],
   "author": "",
   "license": "MIT",
   "devDependencies": {
     "@types/node": "^20.4.5",
+    "ava": "^6.1.1",
     "pino-pretty": "^10.3.1",
     "protobufjs-cli": "~1.1.2",
     "typescript": "^5.1.6"
