--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "@fastify/formbody": "^7.4.0",
     "@fastify/static": "^6.12.0",
     "fastify": "^4.22.2",
-    "protobufjs": "~7.2.5"
+    "protobufjs": "~7.2.5",
+    "redis": "^4.6.13"
   },
   "ava": {
     "extensions": {
