--- a/package.json
+++ b/package.json
@@ -32,12 +32,16 @@
     "redis": "^4.6.13"
   },
   "ava": {
-    "extensions": {
-      "ts": "module"
+    "typescript": {
+      "rewritePaths": {
+        "src/": "dist/"
+      },
+      "compile": "tsc"
     },
     "nodeArguments": [
-      "--import=tsimp"
+      "--trace-deprecation"
     ],
+    "verbose": true,
     "environmentVariables": {
       "PROXY_HOSTNAME": "test.com",
       "SECRET_KEY": "abc123"
