--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "keywords": [],
   "author": "",
   "license": "MIT",
+  "type": "commonjs",
   "devDependencies": {
     "@ava/typescript": "^4.1.0",
     "@types/node": "^20.4.5",
@@ -32,14 +33,12 @@
     "redis": "^4.6.13"
   },
   "ava": {
-    "typescript": {
-      "rewritePaths": {
-        "src/": "dist/"
-      },
-      "compile": "tsc"
+    "extensions": {
+      "ts": "module"
     },
     "nodeArguments": [
-      "--trace-deprecation"
+      "--trace-deprecation",
+      "--import=tsimp"
     ],
     "verbose": true,
     "environmentVariables": {
