--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
   "type": "commonjs",
   "devDependencies": {
     "@ava/typescript": "^4.1.0",
-    "@types/node": "^20.4.5",
+    "@types/node": "^20.12.2",
     "ava": "^6.1.1",
     "pino-pretty": "^10.3.1",
     "protobufjs-cli": "~1.1.2",
@@ -29,8 +29,8 @@
     "@fastify/formbody": "^7.4.0",
     "@fastify/static": "^6.12.0",
     "fastify": "^4.22.2",
-    "protobufjs": "~7.2.5",
-    "redis": "^4.6.13"
+    "ioredis": "^5.3.2",
+    "protobufjs": "~7.2.5"
   },
   "ava": {
     "extensions": {
