--- a/fly.toml
+++ b/fly.toml
@@ -1,10 +1,10 @@
-app = 'pkce-proxy-selfservice'
+app = 'pkce-proxy'
 primary_region = 'lhr'
 
 [build]
 
 [http_service]
-internal_port = 3000
+internal_port = 5000
 force_https = true
 auto_stop_machines = true
 auto_start_machines = true
