--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@fastify/formbody": "^7.4.0",
     "@fastify/static": "^6.12.0",
     "fastify": "^4.22.2",
+    "fastify-metrics": "^11.0.0",
     "ioredis": "^5.3.2",
     "protobufjs": "~7.2.5"
   },
