--- a/package.json
+++ b/package.json
@@ -18,9 +18,11 @@
   "devDependencies": {
     "@ava/typescript": "^4.1.0",
     "@types/node": "^20.12.2",
+    "@types/supertest": "^6.0.2",
     "ava": "^6.1.1",
     "pino-pretty": "^10.3.1",
     "protobufjs-cli": "~1.1.2",
+    "supertest": "^6.3.4",
     "tsimp": "^2.0.11",
     "typescript": "^5.1.6"
   },
@@ -44,7 +46,8 @@
     "verbose": true,
     "environmentVariables": {
       "PROXY_HOSTNAME": "test.com",
-      "SECRET_KEY": "abc123"
+      "SECRET_KEY": "abc123",
+      "SESSION_MAX_SECONDS": "1"
     }
   }
 }
