--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
   "scripts": {
     "start": "node .",
     "build": "tsc && cp -R public dist/",
-    "test": "ava"
+    "test": "ava",
+    "benchmark-url-size": "PROXY_HOSTNAME=1 SECRET_KEY=1 node dist/scripts/benchmark-url-size.js"
   },
   "keywords": [],
   "author": "",
