--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,5 +8,5 @@
     "esModuleInterop": true,
     "noUncheckedIndexedAccess": true
   },
-  "include": ["./index.ts"]
+  "include": ["./index.ts", "./scripts/**/*.ts"],
 }
