Run tests serially
Not ideal, but right now our state value is the same for every test meaning that overlapping tests don't work. For now run serially

--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   "scripts": {
     "start": "node .",
     "build": "tsc && cp -R public dist/",
-    "test": "ava",
+    "test": "ava --serial",
     "benchmark-url-size": "PROXY_HOSTNAME=1 SECRET_KEY=1 node dist/scripts/benchmark-url-size.js"
   },
   "keywords": [],
