--- a/package.json
+++ b/package.json
@@ -14,9 +14,9 @@
   "type": "commonjs",
   "devDependencies": {
     "@ava/typescript": "^4.1.0",
+    "@types/bun": "^1.0.12",
     "@types/supertest": "^6.0.2",
     "ava": "^6.1.1",
-    "bun-types": "^1.1.2",
     "pino-pretty": "^10.3.1",
     "protobufjs-cli": "~1.1.2",
     "supertest": "^6.3.4",
