--- a/package.json
+++ b/package.json
@@ -16,20 +16,14 @@
     "@ava/typescript": "^4.1.0",
     "@types/bun": "^1.0.12",
     "@types/supertest": "^6.0.2",
-    "ava": "^6.1.1",
     "pino-pretty": "^10.3.1",
-    "protobufjs-cli": "~1.1.2",
     "supertest": "^6.3.4",
-    "tsimp": "^2.0.11",
     "typescript": "^5.1.6"
   },
   "dependencies": {
-    "@deliberative/crypto": "^1.0.8",
     "@fastify/formbody": "^7.4.0",
     "@fastify/static": "^6.12.0",
     "fastify": "^4.22.2",
-    "fastify-metrics": "^11.0.0",
-    "ioredis": "^5.3.2",
-    "protobufjs": "~7.2.5"
+    "ioredis": "^5.3.2"
   }
 }
